# package-manager-ci-samples

./: .gitignore  README.md
.github/workflows/: apt.yml  ci.yml  docker.yml
app/whatstheweather/: Cargo.toml  Dockerfile
app/whatstheweather/src/: main.rs
app/whatstheweather/src/models/: weather.rs
