[package]
name = "whatstheweather"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
comfy-table = "7.0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  
